; ModuleID = '/home/carl/AnghaBench/jq/src/extr_parser.c_jq_parse.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_parser.c_jq_parse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.locfile = type { i32, i32 }
%struct.lexer_param = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @jq_parse(%struct.locfile* %0, i32* %1) #0 {
  %3 = alloca %struct.locfile*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.lexer_param, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.locfile* %0, %struct.locfile** %3, align 8
  store i32* %1, i32** %4, align 8
  %8 = getelementptr inbounds %struct.lexer_param, %struct.lexer_param* %5, i32 0, i32 0
  %9 = call i32 @jq_yylex_init_extra(i32 0, i32* %8)
  %10 = load %struct.locfile*, %struct.locfile** %3, align 8
  %11 = getelementptr inbounds %struct.locfile, %struct.locfile* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.locfile*, %struct.locfile** %3, align 8
  %14 = getelementptr inbounds %struct.locfile, %struct.locfile* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = getelementptr inbounds %struct.lexer_param, %struct.lexer_param* %5, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @jq_yy_scan_bytes(i32 %12, i32 %15, i32 %17)
  store i32 %18, i32* %6, align 4
  store i32 0, i32* %7, align 4
  %19 = call i32 (...) @gen_noop()
  %20 = load i32*, i32** %4, align 8
  store i32 %19, i32* %20, align 4
  %21 = load i32*, i32** %4, align 8
  %22 = load %struct.locfile*, %struct.locfile** %3, align 8
  %23 = call i32 @yyparse(i32* %21, i32* %7, %struct.locfile* %22, %struct.lexer_param* %5)
  %24 = load i32, i32* %6, align 4
  %25 = getelementptr inbounds %struct.lexer_param, %struct.lexer_param* %5, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @jq_yy_delete_buffer(i32 %24, i32 %26)
  %28 = getelementptr inbounds %struct.lexer_param, %struct.lexer_param* %5, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @jq_yylex_destroy(i32 %29)
  %31 = load i32, i32* %7, align 4
  %32 = icmp sgt i32 %31, 0
  br i1 %32, label %33, label %39

33:                                               ; preds = %2
  %34 = load i32*, i32** %4, align 8
  %35 = load i32, i32* %34, align 4
  %36 = call i32 @block_free(i32 %35)
  %37 = call i32 (...) @gen_noop()
  %38 = load i32*, i32** %4, align 8
  store i32 %37, i32* %38, align 4
  br label %39

39:                                               ; preds = %33, %2
  %40 = load i32, i32* %7, align 4
  ret i32 %40
}

declare dso_local i32 @jq_yylex_init_extra(i32, i32*) #1

declare dso_local i32 @jq_yy_scan_bytes(i32, i32, i32) #1

declare dso_local i32 @gen_noop(...) #1

declare dso_local i32 @yyparse(i32*, i32*, %struct.locfile*, %struct.lexer_param*) #1

declare dso_local i32 @jq_yy_delete_buffer(i32, i32) #1

declare dso_local i32 @jq_yylex_destroy(i32) #1

declare dso_local i32 @block_free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
